--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -230,6 +230,22 @@ svg {
 
 
 /* Add blur to header */
+.blur-header{
+  background-color: transparent;
+}
+
+.blur-header::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(0, 0%, 10%, .3);
+  backdrop-filter: blur(24px);
+  -webkit-backdrop-filter: blur(24px);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
 
 
 /* Active link */
@@ -320,10 +336,70 @@ svg {
 
 
 /*=============== ABOUT ===============*/
+.about__container{
+  row-gap: 2.5rem;
+}
+
+.about__description{
+  margin-bottom: 2rem;
+}
+
+.about__image{
+  justify-self: center;
+}
+
+.about__blob{
+  width: 320px;
+}
+
+.about__blob path{
+  stroke: var(--first-color);
+}
 
 
 /*=============== SKILLS ===============*/
+.skills{
+  background-color: var(--container-color);
+}
 
+.skills__container{
+  padding-block-end: 2rem;
+  row-gap: 3.5rem;
+}
+
+.skills__data{
+  text-align: center;
+}
+
+.skills__description{
+  margin-bottom: 2rem;
+}
+
+.skills__content,
+.skills_group{
+  display: grid;
+}
+
+.skills__content {
+  grid-template-columns: repeat(2, max-content);
+  column-gap: 4rem;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.skills__group{
+  row-gap: 1rem;
+  list-style: decimal-leading-zero;
+}
+
+.skills__item{
+  font-weight: var(--font-medium);
+  color: var(--title-color);
+}
+
+.skills__item::marker{
+  color: var(--first-color);
+}
 
 /*=============== SERVICES ===============*/
 
