--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -249,7 +249,9 @@ svg {
 
 
 /* Active link */
-
+.active-link{
+  color: var(--first-color);
+}
 
 /*=============== HOME ===============*/
 .home{
@@ -376,7 +378,7 @@ svg {
 }
 
 .skills__content,
-.skills_group{
+.skills__group{
   display: grid;
 }
 
@@ -461,8 +463,8 @@ svg {
   width: 100%;
   height: 100%;
   background: linear-gradient(180deg, 
-                              hsla(0,0%,0%,0) 0%,
-                              hsla(var(--hue), 70%, 40%, .8));
+              hsla(0,0%,0%,0) 0%,
+              hsla(var(--hue), 70%, 40%, .8));
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 1rem;
@@ -520,6 +522,7 @@ svg {
 }
 
 .contact__input{
+  width: 100%;
   padding: 1rem 1.25rem;
   border-radius: .5rem;
   background-color: var(--container-color);
@@ -614,16 +617,272 @@ svg {
 }
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--body-color);
+  padding: 6px;
+  display: inline-flex;
+  border-radius: .25rem;
+  color: var(--first-color);
+  font-size: 1.25rem;
+  box-shadow: 0 4px 12px hsla(228, 15%, 8%, .4);
+  z-index: var(--z-tooltip);
+  transition: bottom .4s, transform .4s;
+}
 
+.scrollup:hover{
+  transform: translateY(-.25rem);
+}
 
 /* Show Scroll Up */
-
+.show-scroll{
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (min-width: 320px) {
+  .container{
+    margin-inline: 1rem;
+  }
 
+  .skills__content{
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+  }
+
+  .services__card{
+    padding-block: 1.5rem;
+  }
+  
+}
 
 /* For medium devices */
+@media screen and (min-width: 576px) {
+  .home__container,
+  .about__container,
+  .skills__container,
+  .services__container{
+    grid-template-columns: 360px;
+    justify-content: center;
+  }
+}
 
+@media screen and (min-width: 768px) {
+  .nav__menu{
+    width: 55%;
+  }
+
+  .home__container,
+  .about__container,
+  .skills__container{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .home__data,
+  .about__data,
+  .skills__data,
+  :is(.about__data, .skills__data) :is(.section__subtitle, .section__title){
+    text-align: initial;
+  }
+
+  .home__social{
+    justify-content: initial;
+  }
+
+  .home__social-link{
+    height: max-content;
+  }
+
+  .home__blob,
+  .about__blob{
+    width: 400px;
+  }
+
+  .about__data{
+    order: 1;
+  }
+
+  .services__container,
+  .projects__container{
+    grid-template-columns: repeat(2, 352px);
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 1023px) {
+
+  .section{
+    padding: 7rem 2rem;
+  }
+
+  .section__subtitle{
+    font-size: var(--normal-font-size);
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 1.5rem);
+  }
+
+  .nav__close,
+  .nav__toggle{
+    display: none;
+  }
+
+  .nav__list{
+    flex-direction: row;
+    column-gap: 3rem;
+  }
+
+  .nav__menu{
+    width: inherit;
+  }
+
+  .blur-header::after{
+    backdrop-filter: blur(25px);
+    -webkit-backdrop-filter: blur(25px);
+  }
+}
+
+@media screen and (min-width: 1152px) {
+
+  .section {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .container{
+    margin-inline: auto;
+  }
+
+  .home__container{
+    grid-template-columns: 445px 550px;
+    column-gap: 7rem;
+    padding-block: 2rem 3rem;
+  }
+
+  .home__title{
+    font-size: calc(var(--biggest-font-size) - .5rem);
+  }
+
+  .home__blob,
+  .about__blob{
+    width: 550px;
+  }
+
+  .home__content{
+    row-gap: 4.5rem;
+  }
+
+  .home__description{
+    margin-block: 1.5rem 2.5rem;
+  }
+
+  .home__social{
+    column-gap: 1.5rem;
+  }
+
+  .about__container{
+    grid-template-columns: 550px 460px;
+    column-gap: 4.5rem;
+    padding-bottom: 1rem;
+  }
+
+  .about__description,
+  .skills__description{
+    margin-bottom: 3rem;
+  }
+
+  .skills__container{
+    grid-template-columns: 340px 425px;
+    column-gap: 10rem;
+    padding-bottom: 4rem;
+  }
+
+  .skills__content{
+    column-gap: 8rem;
+  }
+
+  .skills__group{
+    row-gap: 1.5rem;
+  }
+
+  .skills__item{
+    font-size: var(--h3-font-size);
+  }
+
+  .services__container{
+    grid-template-columns: repeat(3, 352px);
+    padding-block: 2.5rem 4rem;
+  }
+
+  .services__card{
+    padding: 3.5rem 4rem;
+  }
+
+  .projects__container{
+    grid-template-columns: repeat(3, 350px);
+    row-gap: 3rem;
+    padding-block: 2.5rem 4rem;
+  }
+
+  .projects__button{
+    font-size: var(--normal-font-size);
+  }
+
+  .contact{
+    display: grid;
+  }
+
+  .contact__container{
+    grid-template-columns: 680px;
+    padding-block: 2.5rem 2rem;
+  }
+
+  .contact__form{
+    row-gap: 1.5rem;
+  }
+
+  .contact__group{
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1.5rem;
+  }
+
+  .contact__input{
+    padding: 1.5rem;
+  }
+
+  .contact__form textarea{
+    height: 20rem;
+  }
+
+  .footer{
+    padding-block: 4.5rem 4rem;
+  }
+
+  .footer__container{
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    text-align: initial;
+  }
+
+  .footer__title{
+    font-size: var(--bigger-font-size);
+  }
+
+  .footer__social{
+    column-gap: 1.5rem;
+  }
+
+  .footer__copy{
+    margin: 0;
+    justify-self: flex-end;
+  }
+
+  .scrollup{
+    right: 3rem;
+  }
+}
